I added unordered lists

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -33,5 +33,21 @@
         <p>Eating is the ingestion of food, typically to provide a heterotrophic organism with energy and to 
            allow for growth. For humans, eating is an activity of daily living.
         </p>   
+        <p><em>My favorite foods</em></p>
+        <ol>
+            <li>Chips</li>
+            <li>Meat</li>
+            <li>Fruits</li>
+            <li>Salad</li>
+            <li>Snacks</li>
+        </ol>
+        <p><em>My bestfriends</em></p>
+        <ul>
+            <li>Ines</li>    
+            <li>Diane</li>    
+            <li>Naome</li>    
+            <li>Klarys</li>    
+            <li>Stacy</li>  
+        </ul>      
     </body>
 </html>
